--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
     <div id="content">
         <center>
             <h1>visualizing <span class="blue emphasis">query</span> + <span class="pink emphasis">key</span> vectors in <span class="mono">BERT</span></h1>
-            <label for="layer">select layer:</label>
+            <label for="layer">TSNE plot for layer:</label>
             <select name="layer" id="layer">
-                <option value="0">0</option>
+                <option value="0" selected>0</option>
                 <option value="1">1</option>
                 <option value="2">2</option>
                 <option value="3">3</option>
@@ -41,7 +41,7 @@
             </select>
             <label for="head">and head:</label>
             <select name="head" id="head">
-                <option value="0">0</option>
+                <option value="0" selected>0</option>
                 <option value="1">1</option>
                 <option value="2">2</option>
                 <option value="3">3</option>
