search working for type graphs (but kinda slow...)

--- a/index.html
+++ b/index.html
@@ -80,6 +80,16 @@
           <option value="position">position</option>
         </select>
       </div>
+      <div id="search" class="control">
+        <label class="emphasis" for="search-text">search for:</label>
+        <input
+          type="text"
+          id="search-text"
+          name="search-text"
+          placeholder="token + enter"
+        />
+        <span id="clear" title="clear" class="hide">x</span>
+      </div>
       <div id="graph"></div>
     </div>
 
