search working better ish?

--- a/index.html
+++ b/index.html
@@ -73,13 +73,6 @@
         <span class="bar control">|</span
         ><span class="link" title="toggle view" id="view-all">view all</span>
       </center>
-      <!-- <div id="graph-dropdown">
-        <label class="emphasis" for="graph-type">color by:</label>
-        <select name="graph-type" id="graph-type">
-          <option value="type" selected>type</option>
-          <option value="position">position</option>
-        </select>
-      </div>
       <div id="search" class="control">
         <label class="emphasis" for="search-text">search for:</label>
         <input
@@ -87,9 +80,11 @@
           id="search-text"
           name="search-text"
           placeholder="token + enter"
+          spellcheck="false"
         />
         <span id="clear" title="clear" class="hide">x</span>
-      </div> -->
+        <span id="results-count" class="hide">...</span>
+      </div>
       <div id="graph"></div>
     </div>
 
