--- a/index.html
+++ b/index.html
@@ -73,16 +73,25 @@
         <span class="bar control">|</span
         ><span class="link" title="toggle view" id="view-all">view all</span>
       </center>
-      <div id="search" class="control">
-        <label class="emphasis" for="search-text">search for:</label>
-        <input
-          type="text"
-          id="search-text"
-          name="search-text"
-          placeholder="token + enter"
-          spellcheck="false"
-        />
-        <span id="clear" title="clear" class="hide">x</span>
+      <div class="top-menu">
+        <div id="search" class="control">
+          <label class="emphasis" for="search-text">search for:</label>
+          <input
+            type="text"
+            id="search-text"
+            name="search-text"
+            placeholder="token + enter"
+            spellcheck="false"
+          />
+          <span id="clear" title="clear" class="hide">x</span>
+        </div>
+        <span
+          id="reset"
+          title="clear attention data"
+          style="display: none"
+          class="emphasis"
+          >clear attention data</span
+        >
         <span id="results-count" class="hide">...</span>
       </div>
       <div id="graph"></div>
@@ -91,5 +100,9 @@
     <!-- Javascript files -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="main.js" type="text/javascript"></script>
+    <script
+      type="module"
+      src="https://cdnjs.cloudflare.com/ajax/libs/d3/7.6.1/d3.min.js"
+    ></script>
   </body>
 </html>
