--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
           <span class="pink emphasis">key</span> vectors in
           <span class="mono">BERT</span>
         </h1>
-        <label for="layer" class="control">TSNE plot for layer:</label>
+        <span id="type-label" title="toggle plot type">TSNE</span>
+        <label for="layer" class="control">plot for layer:</label>
         <select name="layer" id="layer" class="control">
           <option value="0" selected>0</option>
           <option value="1">1</option>
@@ -70,7 +71,7 @@
           <option value="10">10</option>
           <option value="11">11</option>
         </select>
-        <span class="bar control">|</span
+        <span class="bar">|</span
         ><span class="link" title="toggle view" id="view-all">view all</span>
       </center>
       <div class="top-menu">
