added clear button for clustering

--- a/index.html
+++ b/index.html
@@ -93,6 +93,13 @@
           class="emphasis"
           >clear attention data</span
         >
+        <span
+          id="reset-cluster"
+          title="clear cluster data"
+          style="display: none"
+          class="emphasis"
+          >clear cluster data</span
+        >
         <span id="results-count" class="hide">...</span>
       </div>
       <div id="graph"></div>
