new attn feature

--- a/index.html
+++ b/index.html
@@ -103,6 +103,12 @@
         <span id="results-count" class="hide">...</span>
       </div>
       <div id="graph"></div>
+      <span
+        id="attn-filter"
+        title="toggle attention filter"
+        class="control emphasis"
+        >show tokens with attention &ge; 0.2</span
+      >
     </div>
 
     <!-- Javascript files -->
