--- a/index.html
+++ b/index.html
@@ -111,6 +111,10 @@
         <div class="control">
           <p id="att-view-label">Attention - Sentence View</p>
           <p id="att-caption">click a point to explore its attention!</p>
+          <div id="att-labels" style="display: none">
+            <span class="left">q</span>
+            <span class="right">k</span>
+          </div>
           <div id="att-view"></div>
           <input id="attn-update" type="checkbox" style="display: none" />
           <span
