add legend labels

--- a/index.html
+++ b/index.html
@@ -125,6 +125,10 @@
           >
         </div>
         <div id="graph"></div>
+        <div id="leg-labels">
+          <span class="left">q</span>
+          <span class="right">k</span>
+        </div>
       </div>
     </div>
 
