--- a/old_version/index.html
+++ b/old_version/index.html
@@ -13,8 +13,8 @@
       name="description"
       content="Interactive TSNE plots of query + key vectors generated from BERT"
     />
-    <meta property="og:image" content="img/socimg.png" />
-    <link rel="icon" type="image/png" href="img/fav.png" />
+    <meta property="og:image" content="./img/socimg.png" />
+    <link rel="icon" type="image/png" href="./img/fav.png" />
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
